# Platformer

./: .clangd  CMakeLists.txt  run.sh
src/: Animation.cpp  Animation.hpp  CMakeLists.txt  Entity.cpp  Entity.h  Event.cpp  Event.hpp  Eventable.cpp  Eventable.hpp  Game.cpp  Game.h  Game.hpp  MainChar.cpp  MainChar.h  MainChar.hpp  Mezo.hpp  PCH.hpp  Rect.hpp  SAT.cpp  SAT.hpp  Texture.cpp  Texture.h  Texture.hpp  UI.hpp  global.h  main.cpp  stl.hpp  utils.h
src/GUI/: CMakeLists.txt  PCH.hpp  window.cpp  window.hpp
